; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/tools/lib/traceevent/extr_event-parse.c___read_expect_type.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/tools/lib/traceevent/extr_event-parse.c___read_expect_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8**, i32)* @__read_expect_type to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @__read_expect_type(i32 %0, i8** %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* %6, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %3
  %11 = load i8**, i8*** %5, align 8
  %12 = call i32 @read_token(i8** %11)
  store i32 %12, i32* %7, align 4
  br label %16

13:                                               ; preds = %3
  %14 = load i8**, i8*** %5, align 8
  %15 = call i32 @read_token_item(i8** %14)
  store i32 %15, i32* %7, align 4
  br label %16

16:                                               ; preds = %13, %10
  %17 = load i32, i32* %7, align 4
  %18 = load i32, i32* %4, align 4
  %19 = call i32 @test_type(i32 %17, i32 %18)
  ret i32 %19
}

declare dso_local i32 @read_token(i8**) #1

declare dso_local i32 @read_token_item(i8**) #1

declare dso_local i32 @test_type(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
